Worked on and tested vision alignment